--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,9 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./style.css">
   <title>npm</title>
 </head>
 <body>
-  <!-- Your code goes here -->
+  <nav>
+    <div class="top-left">
+      <a class = "heart" href="#">♥︎</a>
+      <span class="acronym">Neophobe Plebeian Mumpsimus</span>
+    </div>
+    <ul class="top-links">
+      <li><a href="#">npm Enterprise</a></li>
+      <li><a href="#">features</a></li>
+      <li><a href="#">pricing</a></li>
+      <li><a href="#">documentation</a></li>
+      <li><a href="#">support</a></li>
+    </ul>
+  </nav>
+  /********** header **********/
+  <header class="header">
+    <img src="./images/npm-logo.png" alt="npm-logo">
+    <form action="#">
+      <input class="search-bar" type="text" value="find packages">
+      <input class="submit" type="submit" value="🔍">
+    </form>
+    <ul>
+      <li><a href="#">sign up</a> or <a href="#">log in</a></li>
+      <li><img src="images/bear-logo.png" alt="Bear Logo"></li>
+    </ul>
+
+    <h1>Build amazing things</h1>
+    <p>npm is the package manager for JavaScript and the world's largest software registry. Discover packages of reusable code – and assemble them in powerful new ways. </p>
+    <button>Sign up for npm</button>
+  </header>
+  <section id="collaboration">
+    <h3>npm Org is a powerful collaboration — free </h3>
+    <ul>
+      <li>Encourage code discovery and re-use within teams</li>
+      <li>Publish and control access to your own namespace</li>
+      <li>Manage public and private code with the same workflow</li>
+    </ul>
+    <button>Sign up for Orgs</button> <br>
+    or <a href="#">Learn more about Orgs</a>
+  </section>
+  <section id="install"></section>
+  <section id="blocks"></section>
 </body>
 </html>
