--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,7 +21,8 @@
       <li><a href="#">support</a></li>
     </ul>
   </nav>
-  /********** header **********/
+
+  <!-- ********** header ********** -->
   <header class="header">
     <img src="./images/npm-logo.png" alt="npm-logo">
     <form action="#">
@@ -37,8 +38,10 @@
     <p>npm is the package manager for JavaScript and the world's largest software registry. Discover packages of reusable code – and assemble them in powerful new ways. </p>
     <button>Sign up for npm</button>
   </header>
+
+  <!-- ********** collaboration ********** -->
   <section id="collaboration">
-    <h3>npm Org is a powerful collaboration — free </h3>
+    <h2>npm Org is a powerful collaboration — free </h3>
     <ul>
       <li>Encourage code discovery and re-use within teams</li>
       <li>Publish and control access to your own namespace</li>
@@ -47,7 +50,33 @@
     <button>Sign up for Orgs</button> <br>
     or <a href="#">Learn more about Orgs</a>
   </section>
-  <section id="install"></section>
-  <section id="blocks"></section>
+
+  <!-- ********** install ********** -->
+  <section id="install">
+    <h2>What is npm?</h2>
+    <p>Use npm to install, share, and distribute code; manage dependencies in your projects; and share & receive feeback with others.</p>
+    <button>Install npm</button>
+  </section>
+
+  <!-- ********** blocks ********** -->
+  <section id="blocks">
+    <h2>What can you make with 475,000 building blocks?</h2>
+    <p>The npm registry hosts almost half a million packages of free, reusable code - the largest software registry in the world.</p>
+    <article>
+      <img src="images/binoculars.svg" alt="binoculars">
+      <h3>Find</h3>
+      <p>Libraries like <a href="#">JQuery</a>, <a href="#">Bootstrap</a> <a href="#">React</a> and <a href="#">Angular</a>, and components from frameworks such as Ember.</p>
+    </article>
+    <article>
+      <img src="images/mountain-flag.svg" alt="mountain">
+      <h3>Discover</h3>
+      <p>Packages for mobile, IoT, front end, back end, robotics... everything you need to start building amazing things.</p>
+    </article>
+    <article>
+      <img src="images/backpack.svg" alt="backpack">
+      <h3>Build</h3>
+      <p>Assemble packages like building blocks to quickly develop awesome new projects.</p>
+    </article>
+  </section>
 </body>
 </html>
